# fx_arbitrage_finale

./: .RData  .Renviron.template  .Rhistory  .env  .gitignore  .renviron.R  ACCEPTING_CHANGES.md  Fil navn samlet.txt  README.md  run.R
.Rproj.user/6F9E75C2/jobs/: A0031DB0-output.json
.Rproj.user/6F9E75C2/pcs/: files-pane.pper  find-replace-in-files.pper  windowlayoutstate.pper
.Rproj.user/6F9E75C2/sources/per/t/: 1727D91C  1727D91C-contents  1B659350  457D834B  457D834B-contents  B897FF0F  B897FF0F-contents
.Rproj.user/6F9E75C2/sources/prop/: 0287C268  0AB36C23  1794905E  44AC70A9  4A91CCA5  51EB7401  54A57E32  5D118D33  643F5C98  70AF96D2  7AA134F4  890230AF  90414EA7  91155FE7  942D33A9  9B2BA3A0  9C13622D  B0A74364  B3B1AA5A  B9230B1E  C5625BCF  CB75945B  CE3DB533  DA46BC69  F8EB6182  INDEX
.Rproj.user/shared/notebooks/: paths
.github/workflows/: ci.yml
C++/: CMakeLists.txt  engine.c  engine.h  engine_R.c  libengine_v4.dylib  matrix.h  ringbuffer.h  routes.c  test_matrix.c
C++/tests/: test_engine_concurrency.c  test_matrix.c
R/: DirectStream.R  Engine_Wrapper.R  core_runtime.R  trading_bot.R  utils.R
R/tests/: testthat.R
R/tests/testthat/: helper-paths.R  test_directstream_normalization.R  test_engine_integration.R  test_run_startup.R  test_utils.R
dev/: generate_snapshot.sh
dev/Oppryding/: ALL_CODE.txt  DirectStream copy.R  Enginge_Bindings.R  PROJECT_FULL_CODE_DUMP.txt  Quote_Map_Preprocessor.R  available_pairs.txt  engine wrappers usikker 2.r  funksjoner.rb  run Orginal versjonen.R  tradingrobot copy.R  tri_fx_arbitrage_project_v3.Rproj  v4 engine wrappers ussiker1r
dev/Oppryding/Backupfiler/: Logger.R  Order.R  Settings.R  Streaming.R  traderhelperC.cpp
dev/Oppryding/C++ backup/: C.motor.cpp  Untitled-1.cpp  engine_core.cpp  engine_core.hpp  engine_participation.cpp  pair_update.cpp  price_matrices.cpp  price_matrices.hpp  quote_map.cpp  quote_map.hpp  ringbuffer_motor.cpp
dev/Oppryding/C++ copy/: engine.c  engine_R.c  engine_py.py  matrix.c  results.h  routes.h  ticks.c  ticks.h
dev/Oppryding/Demo/: Demo copy 2.R  DemoMotor.cpp  DemoUtils.R  Demo_Engine_Wrappers.R  Fil:kode_struktur.R  Konsoll kommandoer.R
dev/Oppryding/data/: arbitrasje_logg.csv  executions_live_ready.csv  profit_events.csv  signals_live_ready.csv
dev/snapshot_20251202_184659Z/: FILE_INDEX.csv  deps.dot  git_head.txt  git_last5.txt
tests/: testthat.R
tests/testthat/: test-directstream.R  test-utils.R
